Bagian Main oleh Krisna Aldi

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelompok 9C</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="header-logo">
             <h1><a href="index.html">Kelompok 9C</a></h1>
+        </div>
+        <div class="header-list">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Profil</a></li>
@@ -22,6 +25,23 @@
             </ul>
         </div>
     </header>
+
+    <!-- Bagian Main -->
+    <div class="top-wrapper">
+        <div class="container">
+            <h1>SELAMAT DATANG DI WEBSITE KELOMPOK 9C</h1>
+            <div class="btn-wrapper">
+                <a href="#" class="btn mulai">Kunjungi Profil</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main -->
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
 </body>
 
 </html>
