Bagian Body dari ken

--- a/index.html
+++ b/index.html
@@ -36,8 +36,58 @@
         </div>
     </div>
 
-    <!-- Main -->
-
+    <!-- Bagian Body -->
+    <div class="tentang">
+        <div class="container">
+            <h2>About</h2>
+            <p> Hai perkenalkan kami dari Kelompok 9C telah menyelesaikan proyek kelompok yaitu membuat halaman web yang
+                berisi tentang profil kami. Kalimat mutiara dari kami adalah <strong>"Cukuplah programming saja yang
+                    sering
+                    error, namun jangan sampai otak kita ikutan error juga. Semangat!"</strong>, Berikut ini adalah
+                profil dari
+                masing masing anggota dari tim kami</p>
+        </div>
+    </div>
+    <div class="lesson-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h2>Profil TIM</h2>
+            </div>
+            <div class="lessons">
+                <div class="lesson">
+                    <div class="lesson-icon">
+                        <img src="img/aslan.jpeg">
+                    </div>
+                    <p class="txt-contents">La Ode Muhamad Aslan (Teknik Elektro)
+                    </p>
+                </div>
+                <div class="lesson">
+                    <div class="lesson-icon">
+                        <img src="img/a.jpeg">
+                    </div>
+                    <p class="txt-contents">Kurrata Aeni (Sistem Informasi)</p>
+                </div>
+                <div class="lesson">
+                    <div class="lesson-icon">
+                        <img src="img/ken.jpg">
+                    </div>
+                    <p class="txt-contents">Ken Putri Virta Zaneta (Psikologi)</p>
+                </div>
+                <div class="lesson">
+                    <div class="lesson-icon">
+                        <img src="img/lymin.jpeg">
+                    </div>
+                    <p class="txt-contents">Lymin (Teknik Informatika)</p>
+                </div>
+                <div class="lesson">
+                    <div class="lesson-icon">
+                        <img src="https://prog-8.com/images/html/advanced/php.png">
+                    </div>
+                    <p class="txt-contents">Krisna Aldi</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer>
 
