Bagian footer dari lymin

--- a/index.html
+++ b/index.html
@@ -81,17 +81,22 @@
                 </div>
                 <div class="lesson">
                     <div class="lesson-icon">
-                        <img src="https://prog-8.com/images/html/advanced/php.png">
+                        <img src="img/krisna.jpeg">
                     </div>
-                    <p class="txt-contents">Krisna Aldi</p>
+                    <p class="txt-contents">Krisna Aldi (Bimbingan dan Konseling</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- footer -->
-    <footer>
+    <div class="footer">
+        <footer>
+            <div class="container">
+                <small>Copyright &copy; 2020 - Kelompok 9C. All Rights Reserved.</small>
 
-    </footer>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
